--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -7,7 +7,7 @@ es:
     page_language: "Idioma de la página"
     spanish: "Español"
     english: "Inglés"
-    open_goverment: "Transparencia"
+    open_goverment: "Toma de Decisiones"
     transparency: "Transparencia"
     participation: "Decide Madrid"
     open_data: "Datos abiertos"
