New links and order to sign in page.

--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -5,7 +5,7 @@ es:
     sign_in: "Entrar"
     email: "Correo electrónico"
     password: "Contraseña"
-    forgot_password: "¿ Olvidó contraseña ?"
+    forgot_password: "¿Olvidaste tu contraseña?"
     remember: "Recordar en este ordenador"
     password_reset_instructions: "Te enviaremos instrucciones de restablecimiento de contraseña"
     reset_password: "Restablecer la contraseña"
