--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -17,7 +17,7 @@ es:
     btn_public_agenda: "Agendas públicas"
     btn_organizations: "Consulta de registro"
     btn_login: "Entrar"
-    btn_home: "Inicio"
+    btn_home: "Portada"
     btn_agenda: "Agenda"
     btn_registration_lobbies: "Registro de lobbies"
     btn_regulations: "Huella normativa"
