Fix texts and links on home.

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -11,9 +11,9 @@ es:
     transparency: "Transparencia"
     participation: "Decide Madrid"
     open_data: "Datos abiertos"
-    transparency_url: "http://www.madrid.es/portaldetransparencia "
+    transparency_url: "https://transparencia.madrid.es"
     participation_url: "https://decide.madrid.es"
-    open_data_url: "http://datos.madrid.es"
+    open_data_url: "https://datos.madrid.es"
     btn_public_agenda: "Agendas públicas"
     btn_organizations: "Consulta de registro"
     btn_login: "Entrar"
@@ -34,7 +34,7 @@ es:
     register_lobby_title: "Registro de Lobbies"
     register_lobby_description: "Este es el espacio donde deben inscribirse las personas y entidades que quieren influir en la elaboración de las normas, políticas y toma de decisiones municipales."
     regulations_title: "Huella normativa"
-    regulations_description: "Aquí puedes conocer los diferentes documentos elaborados el proceso de tramitación de las normas municipales."
+    regulations_description: "Aquí puedes conocer los diferentes documentos elaborados en el proceso de tramitación de las normas municipales."
     generic_text_title: "Sobre el proceso de toma de decisiones"
     generic_text_block_1_html: "La toma de decisiones públicas es un proceso que se compone de distintas fases y en el que participan diversos actores. Sea cual sea el tema sobre el que se quiere tomar una decisión, siempre debe perseguir el interés general. <br><br> El Ayuntamiento de Madrid abre a través de su portal de transparencia un espacio en el que se pueda hacer un seguimiento del proceso de toma de decisiones a través de tres mecanismos:"
     generic_text_list_first: "Agendas públicas: Espacio en el que puedes consultar las reuniones que mantienen y los eventos en los que participan los máximos responsables del Ayuntamiento de Madrid. También saber quiénes participan en el proceso de toma de decisiones."
