--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -125,8 +125,8 @@ es:
     file: "Archivo"
     title: "Título"
     company: "Organización"
-    companies: "Organizaciones"
-    new_company: "Nueva organización"
+    companies: "Lobbies"
+    new_company: "Nuevo lobby"
     description: "Descripción"
     new_event: "Nuevo evento"
     edit_event: "Editar evento"
