--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -133,8 +133,8 @@ es:
     file: "Archivo"
     title: "Título"
     company: "Organización"
-    companies: "Organizaciones"
-    new_company: "Nueva organización"
+    companies: "Lobbies"
+    new_company: "Nuevo lobby"
     description: "Finalidad y objetivos de quien se inscribe"
     title_event: "Solicitud de evento"
     new_event: "Nueva solicitud"
