--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -4,7 +4,7 @@ es:
 
   organizations:
     title: Consulta del Registro de Lobbies
-    description: Consulte las organizaciones registradas.
+    description: Consulte los lobbies registradas.
     events_as_lobby: Reuniones realizadas
     results_title: Resultados
     subtitle:
