Add links. Add title to links. Add count organizations.

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -54,6 +54,7 @@ es:
     managed_positions: "Agendas"
     manage_agendas: "Asignación de Agendas"
     lobby: "Lobby"
+    lobby_show: "Ver lobby"
     lobby_activity: "Actividad de Lobby"
     holder_input: "Buscar una persona por nombre"
 
