Fix grammatical errors

--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -38,7 +38,7 @@ es:
     attributes:
       organization:
         name: "Nombre"
-        category_id: "Categoria"
+        category_id: "Categoría"
       organization/legal_representant:
         identifier: "Representante Legal: Identificador"
         name: "Representante Legal: Nombre"
