--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -102,7 +102,7 @@ es:
     province: provincia
     phones: telefonos
     email: email
-    category_name: nombre de categoria
+    category_name: nombre de Categoría
     description: descripción
     web: web
     fiscal_year: año fiscal
