--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -84,7 +84,7 @@ es:
 
     identifying_data:
       title_fieldset: "Datos identificativos"
-      identifier: "DNI, NIF, NIE"
+      identifier: "DNI/NIF/NIE/Pasaporte"
       name: "Nombre o razón social"
       first_surname: "Primer apellido"
       second_surname: "Segundo apellido"
@@ -102,7 +102,7 @@ es:
       postal_code: "CP"
       town: "Municipio"
       province: "Provincia"
-      description: "Descripción"
+      description: "Finalidad y objetivos"
       registered_lobbies_title: "¿Está inscrito en algún otro registro?"
       registered_lobbies:
         no_record: "Ninguno"
@@ -114,7 +114,7 @@ es:
     legal_representant:
       add_legal_representative: "Añadir legal representant"
       title_fieldset: "Representante legal"
-      identifier: "DNI, NIF, NIE"
+      identifier: "DNI/NIF/NIE/Pasaporte"
       name: "Nombre o razón social"
       first_surname: "Primer apellido"
       second_surname: "Segundo apellido"
@@ -149,7 +149,7 @@ es:
       add_represented_entities: "Añadir Entidades a las que se representa"
       title_fieldset: "Datos personas o entidades sin personalidad a quien se va a representar"
       company: "Empresa"
-      identifier: "DNI, NIF, NIE"
+      identifier: "DNI/NIF/NIE/Pasaporte"
       name: "Nombre o razón social"
       first_surname: "Primer apellido"
       second_surname: "Segundo apellido"
