--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -96,6 +96,7 @@ en:
       postal_code: "CP"
       town: "Municipio"
       province: "Provincia"
+      country: "País"
       description: "Descripción"
       registered_lobbies_title: "¿Está inscrito en algún otro registro?"
       registered_lobbies:
