Add new links. Add active class to Administration.

--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -157,7 +157,7 @@ es:
     title_first_block: "Portal de Toma de decisiones"
     description_first_block: "El Ayuntamiento de Madrid quiere que la toma de decisiones públicas de sus máximos responsables sea un proceso abierto y transparente."
     btn_cover_page: "Portada"
-    btn_agendas: "Organización"
+    btn_agendas: "Agendas"
     btn_registration: "Registro de Lobbies"
     btn_normative: "Huella normativa"
 
