Display text by current user on events

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -135,8 +135,10 @@ es:
     companies: "Lobbies"
     new_company: "Nuevo lobby"
     description: "Finalidad y objetivos de quien se inscribe"
-    title_event: "Solicitud de evento"
-    new_event: "Nueva solicitud"
+    title_event_lobby: "Solicitudes de evento"
+    title_event: "Eventos"
+    new_event: "Nuevo evento"
+    new_requeseted_event: "Nueva solicitud"
     edit_event: "Editar evento"
     edit_agents: "Editar agentes"
     edit_title_interests: "Editar áreas de interés"
