--- a/config/locales/public.es.yml
+++ b/config/locales/public.es.yml
@@ -153,6 +153,58 @@ es:
     send: "Enviar"
     sent: "Email enviado correctamente"
     error: "El fichero %{error}"
+
+  accessibility:
+    title: "Accesibilidad"
+    description:
+      part1: "La accesibilidad web se refiere a la posibilidad de acceso a la web y a sus contenidos por todas las personas, independientemente de las discapacidades (físicas, intelectuales o técnicas) que puedan presentar o de las que se deriven del contexto de uso (tecnológicas o ambientales)."
+      part2: "Cuando los sitios web están diseñados pensando en la accesibilidad, todos los usuarios pueden acceder en condiciones de igualdad a los contenidos, por ejemplo:"
+    features:
+      alternative: "Proporcionando un texto alternativo a las imágenes, los usuarios invidentes o con problemas de visión pueden utilizar lectores especiales para acceder a la información."
+      subtitles_html: "Cuando los vídeos disponen de subtítulos, los usuarios con <strong>dificultades auditivas</strong> pueden entenderlos plenamente."
+      simple_contents_html: "Si los contenidos están escritos en un lenguaje sencillo e ilustrados, los usuarios con problemas de <strong>aprendizaje</strong> están en mejores condiciones de entenderlos."
+      movility_html: "Si el usuario tiene problemas de <strong>movilidad</strong> y le cuesta usar el ratón, las alternativas con el teclado le ayudan en la navegación."
+    keyboard:
+      title: "Atajos de teclado"
+      description: "Para poder navegar por este sitio web de forma accesible, se han programado un grupo de teclas de acceso rápido que recogen las principales secciones de interés general en los que está organizado el sitio."
+      navigation:
+        title: "Atajos de teclado para el menú de navegación"
+        key: "Tecla"
+        page: "Página"
+        home: "Portada"
+        agendas: "Agendas"
+        lobbies: "Registro de lobbies"
+        normative_fingerprint: "Huella normativa"
+      shortcuts:
+        title: "Combinación de teclas dependiendo del sistema operativo y navegador"
+        description: "Dependiendo del sistema operativo y del navegador que se utilice, la combinación de teclas será la siguiente:"
+        navigator: "Navegador"
+        shortcut: "Combinación de teclas"
+        explorer_shortcut: "ALT + atajo y luego ENTER"
+        safari_shortcut: "ALT + atajo (si es un MAC, CMD + atajo)"
+        firefox_shortcut: "ALT + MAYÚSCULAS + atajo"
+        chrome_shortcut: "ALT + atajo (si es un MAC, CTRL + ALT + atajo)"
+    text_size:
+      title: "Tamaño del texto"
+      description: "El diseño accesible de este sitio web permite que el usuario pueda elegir el tamaño del texto que le convenga. Esta acción puede llevarse a cabo de diferentes maneras según el navegador que se utilice."
+      explorer: "Ver > Tamaño del texto"
+      safari: "Visualización > ampliar/reducir"
+      firefox: "Ver > Tamaño"
+      chrome: "Ajustes (icono) > Opciones > Avanzada > Contenido web > Tamaño fuente"
+      opera: "Ver > escala"
+      action_to_do: "Acción a realizar"
+      commands:
+        title: "Otra forma de modificar el tamaño de texto es utilizar los atajos de teclado definidos en los navegadores, en particular la combinación de teclas:"
+        increase_html: "<code>CTRL y + (CMD y + en MAC)</code> para aumentar el tamaño del texto"
+        decrease_html: "<code> CTRL y - (CMD y - en MAC)</code> para reducir el tamaño del texto"
+    compatibility:
+      title: "Compatibilidad con estándares y diseño visual"
+      description1_html: "Todas las páginas de este sitio web cumplen con las <strong>Pautas de Accesibilidad</strong> o Principios Generales de Diseño Accesible establecidas por el Grupo de Trabajo <abbr title=\"Web Accessibility Initiative\" lang=\"en\">WAI</abbr> perteneciente al W3C."
+      description2: "Continuamente trabajamos en mejorar la accesibilidad de este sitio web, no obstante, si detecta algún error o desea proponer alguna mejora en materia de accesibilidad, por favor contacte con nosotros."
+    suggestions:
+      title: "Sugerencias y reclamaciones sobre accesibilidad"
+      description_html: "Si detecta que algún documento de este sitio web no es accesible o si tiene alguna otra duda en relación a la accesibilidad de este sitio web, puede utilizar el <a href=\"%{link}\">formulario de sugerencias</a> que el Ayuntamiento de Madrid pone a su disposición."
+
   footer:
     title_first_block: "Portal de Toma de decisiones"
     description_first_block: "El Ayuntamiento de Madrid quiere que la toma de decisiones públicas de sus máximos responsables sea un proceso abierto y transparente."
