--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -111,8 +111,10 @@ es:
     fiscal_year: año fiscal
     subvention: subvención
     contract: contrato
-    denied_public_data: datos publicos denegados
-    denied_public_events: eventos publicos denegados
+    certain_term: La información facilitada es cierta
+    code_of_conduct_term: Aceptar codigo de conducta
+    gift_term: aceptar no realizar regalos
+    lobby_term: acreditar la actividad de lobby
     registered_lobbies: lobbies registrados
     range_fund: rango de fondos
     inscription_reference: refecencie de inscripcion
