--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -77,7 +77,7 @@ es:
     position: "Cargo"
     area: "Unidad"
     main_position: "Titular de la agenda"
-    main_position_help_text: "Introduzca apellido, nombre o cargo de la persona con la que se quiere reunir"
+    main_position_help_text: "Introduzca apellido, nombre o cargo de la persona con la que se quiere reunir, y le mostrará los resultados entre las cuales tendrá que elegir"
     positions: "Histórico de cargos"
     contributed_by: "Gestionado por"
     new_position: "Nuevo cargo"
