--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -114,8 +114,8 @@ es:
     position_not_in_participants: "El titular de agenda se ha incluido también como asistente"
     attachments: "Archivos adjuntos"
     attachments_description: "Descripción de archivos adjuntos"
-    attachments_public: "Archivos adjuntos públicos"
-    attachments_private: "Archivos adjuntos privados"
+    attachments_public: "Este archivo puede ser público"
+    attachments_private: "Este archivo proponemos que sea privado"
     attachments_download: "Download event attachments"
     only_pdf: "Solo PDF"
     name: "Nombre"
