--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -124,8 +124,8 @@ es:
     manager_general_remarks_title: "Observaciones generales Gestor de agendas"
     attachments: "Archivos adjuntos"
     attachments_description: "Descripción de archivo adjunto"
-    attachments_public: "Archivos adjuntos público"
-    attachments_private: "Archivos adjuntos privado"
+    attachments_public: "Este archivo puede ser público"
+    attachments_private: "Este archivo proponemos que sea privado"
     attachments_download: "Descarga los archivos adjuntos"
     only_pdf: "Solo PDF"
     name: "Nombre"
