Fix managar text on sidebar. Reorder index.

--- a/config/locales/admin.es.yml
+++ b/config/locales/admin.es.yml
@@ -2,7 +2,7 @@ es:
   backend:
     menu_admin: "Administrador"
     menu_lobby: "Lobby"
-    menu_user: "Gestor agenda"
+    menu_user: "Gestor"
     close: "Cerrar"
     logout: "Salir"
     btn_admin: "Administración"
