Add attachments to organizations.

--- a/config/locales/organizations.es.yml
+++ b/config/locales/organizations.es.yml
@@ -87,6 +87,10 @@ es:
     placeholder:
       phones: "Puede añadir más de un teléfono"
 
+    organization:
+      add_attachment: Añadir archivo adjunto
+      remove_attachment: Eliminar archivo adjunto
+
     identifying_data:
       title_fieldset: "Datos identificativos"
       identifier: "DNI/NIF/NIE/Pasaporte"
