--- a/config/locales/organizations.en.yml
+++ b/config/locales/organizations.en.yml
@@ -147,7 +147,8 @@ en:
       name: "Nombre o razón social"
       first_surname: "Primer apellido"
       second_surname: "Segundo apellido"
-      from: "Fecha de inicio de la representaciòn"
+      from: "Fecha de inicio de la representación"
+      to: "Fecha de fin de la representación"
       fiscal_year: "Ejercicio anual"
       range_fund_title: "Fondos"
       range_fund:
